salt/files/centos/7/iptables
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 623 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 664 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5445 -j ACCEPT
-A INPUT -p sctp -m sctp --dport 5445 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4505 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4506 -j ACCEPT
-A INPUT -j DROP
